<resources>
    <string name="app_name">Film Catalgue</string>
    <string name="instructions">Selecciona una película para ver su portada</string>
    <string name="gravity">Gravedad</string>
    <string name="jumnaji">Jumanji</string>
    <string name="the_lion_king">El Rey Leon</string>
    <string name="star_wars">Star Wars</string>
    <string name="toy_story">Toy Story</string>
    <string name="inception">El Origen</string>
</resources>